--- a/app/src/main/res/layout-ldpi/activity_main.xml
+++ b/app/src/main/res/layout-ldpi/activity_main.xml
@@ -10,7 +10,7 @@
     <View
         android:id="@+id/view11"
         android:layout_width="0dp"
-        android:layout_height="130dp"
+        android:layout_height="0dp"
         android:background="@drawable/img_cycling_1x"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -20,27 +20,26 @@
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_height="16dp"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="Merhaba, Başar!"
-        android:textAppearance="@android:style/TextAppearance.Material"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@android:color/darker_gray"
         android:textSize="12sp"
         android:textStyle="bold"
         android:typeface="sans"
         app:fontFamily="sans-serif"
-        app:layout_constraintBottom_toBottomOf="@+id/view11"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView11"
         android:layout_width="0dp"
-        android:layout_height="155dp"
+        android:layout_height="170dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:cardCornerRadius="15px"
+        app:cardCornerRadius="10px"
         app:layout_constraintEnd_toStartOf="@+id/cardView9"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,10 +54,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="8dp"
                 android:text="0 km"
-                android:textSize="17sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif"
                 app:layout_constraintBottom_toTopOf="@+id/line"
@@ -70,9 +69,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="16dp"
                 android:textAppearance="@android:style/TextAppearance.Material.Small"
-                android:textSize="17sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +122,7 @@
         android:layout_height="60dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="56dp"
-        app:cardCornerRadius="15px"
+        app:cardCornerRadius="10px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardView11">
 
@@ -148,10 +147,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="8dp"
                 android:text="0 tur"
-                android:textSize="19sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -167,7 +166,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:cardCornerRadius="15px"
+        app:cardCornerRadius="10px"
         app:layout_constraintEnd_toStartOf="@+id/cardView9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView11">
@@ -193,10 +192,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="8dp"
                 android:text="0 km/h"
-                android:textSize="15sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -212,7 +211,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:cardCornerRadius="15px"
+        app:cardCornerRadius="10px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView12"
         app:layout_constraintTop_toBottomOf="@+id/cardView9">
@@ -238,10 +237,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="8dp"
                 android:text="0 ağaç"
-                android:textSize="17sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -258,7 +257,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        app:cardCornerRadius="15px"
+        app:cardCornerRadius="10px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/cardView9"
         app:layout_constraintStart_toStartOf="parent"
@@ -274,10 +273,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
                 android:text="0 cal"
-                android:textSize="17sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -306,7 +306,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:cardCornerRadius="15px"
+        app:cardCornerRadius="10px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView14"
@@ -334,10 +334,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginTop="8dp"
                 android:text="0 g CO2"
-                android:textSize="15sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -355,7 +355,7 @@
         android:foreground="@mipmap/history"
         android:foregroundGravity="center_vertical|center_horizontal"
         app:cardBackgroundColor="@color/history_color"
-        app:cardCornerRadius="15px"
+        app:cardCornerRadius="10px"
         app:layout_constraintEnd_toStartOf="@+id/rankCard"
         app:layout_constraintStart_toEndOf="@+id/cardView11"
         app:layout_constraintTop_toTopOf="@+id/cardView11">
@@ -372,7 +372,7 @@
         android:foreground="@mipmap/save"
         android:foregroundGravity="center_vertical|center_horizontal"
         app:cardBackgroundColor="@color/backColor"
-        app:cardCornerRadius="15px"
+        app:cardCornerRadius="10px"
         app:layout_constraintBottom_toBottomOf="@+id/cardView14"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -389,15 +389,14 @@
         android:foreground="@mipmap/hot"
         android:foregroundGravity="center_vertical|center_horizontal"
         app:cardBackgroundColor="@color/hot"
-        app:cardCornerRadius="15px"
+        app:cardCornerRadius="10px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardView11" />
 
     <View
         android:id="@+id/view4"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        android:layout_marginLeft="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:alpha="0.3"
